bug event overflow solved

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,11 @@ main {
     overflow: visible;
 }
 
+.cell:hover .extra-break {
+
+    display: none;
+}
+
 .today-caption {
     font-size: 4em;
     /* margin-left: 100px;*/
@@ -546,7 +551,7 @@ main {
     border-radius: 10px;
     padding: 3px;
     font-size: 15px;
-    z-index: 2;
+    z-index: 50;
     cursor: pointer;
 }
 
@@ -624,7 +629,6 @@ TO DO : HIDE EVENTS  in the responsive media queries!! */
 @media (max-width: 1600px) {
 
     main {
-
         width: 1500px;
     }
 
@@ -642,13 +646,7 @@ TO DO : HIDE EVENTS  in the responsive media queries!! */
 @media (max-width: 1500px) {
 
     main {
-
         width: 1300px;
-    }
-
-    .string-days>span {
-        text-align: center;
-        justify-content: space-between;
     }
 
     .calendar-container>div {
@@ -659,23 +657,22 @@ TO DO : HIDE EVENTS  in the responsive media queries!! */
 @media (max-width: 1400px) {
 
     main {
-
-        width: 1130px;
+        width: 1200px;
     }
 
     .calendar-container>div {
-        width: 150px;
+        width: 162.35px;
     }
 }
 
 @media (max-width: 1100px) {
 
     main {
-        width: 750px;
+        width: 900px;
     }
 
     .calendar-container>div {
-        width: 101.4px;
+        width: 121.76px;
     }
 }
 
